[package]
name = "appms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"
clap = "2.33.3"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.1"
daemonize = "0.4.1"